# argusnew

./: ArgusUI.html  HANDOFF.md  Makefile  UI.jsx
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/ai/: analysis_service.py  heuristics.py  mission_planner.py  suggestions.py
backend/app/ai/prompts/: analysis.py  command_execution.py  mission_planning.py
backend/app/ai/providers/: __init__.py  base.py  claude.py  ollama.py  openai.py
backend/app/api/: ai.py  autonomy.py  commands.py  health.py  missions.py  robots.py  router.py
backend/app/db/: connection.py
backend/app/db/repositories/: __init__.py  command_repo.py  mission_repo.py  telemetry_repo.py
backend/app/middleware/: api_key_auth.py  rate_limit.py
backend/app/mqtt/: client.py  handlers.py
backend/app/services/: autonomy_service.py  command_service.py  mission_service.py  state_manager.py
backend/app/ws/: manager.py
docker/: docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  frontend.Dockerfile  simulator.Dockerfile
docker/mosquitto/: entrypoint.sh  mosquitto.conf
docker/postgres/: init.sql
frontend/: index.html  nginx.conf  nginx.prod.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  lib.ts
frontend/src/styles/: globals.css
simulator/: pyproject.toml
simulator/simulator/: config.py  main.py
voice/: .env.local  .env.local.example  SETUP.md  package-lock.json  package.json  tsconfig.json
voice/convex/: http.ts  schema.ts
voice/convex/_generated/: api.d.ts
voice/convex/actions/: fleetCommands.ts
