[project]
name = "argus-backend"
version = "0.1.0"
description = "Argus Ground Station Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiomqtt>=2.3.0",
    "pydantic-settings>=2.6.0",
    "websockets>=14.0",
    "httpx>=0.28.0",
    "orjson>=3.10.0",
    "asyncpg>=0.29.0",
    "anthropic>=0.40.0",
    "openai>=1.50.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
