[project]
name = "argus-simulator"
version = "0.1.0"
description = "Argus Robot Swarm Simulator"
requires-python = ">=3.12"
dependencies = [
    "aiomqtt>=2.3.0",
    "httpx>=0.28.0",
    "pyyaml>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["simulator"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
